--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@loaders.gl/kml": "^3.0.2",
     "d3": "^7.0.0",
     "deck.gl": "^8.4.20",
+    "jszip": "^3.6.0",
     "parse2-kmz": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
